<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_creat_vote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context="net.hrsoft.voter.home.activity.CreateVoteActivity">

    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/edit_create_vote_title"
        android:textColor="@color/black"
        android:textColorHint="@color/eidt_create_vote_discript_normal"
        android:hint="@string/edit_create_vote_title"
        android:layout_marginTop="56.5dp"
        />

    <EditText
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_marginRight="33.5dp"
        android:textSize="12sp"
        android:gravity="top"
        android:paddingLeft="4dp"
        android:paddingTop="5.5dp"
        android:background="@drawable/def_edit_creat_vote_discript"
        android:textColor="@color/black"
        android:textColorHint="@color/eidt_create_vote_discript_normal"
        android:layout_marginLeft="33.5dp"
        android:hint="@string/edit_create_vote_discript"
        android:layout_height="50dp"
        android:layout_marginTop="8.5dp"
        android:id="@+id/edit_create_vote_descript"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="120dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="33.5dp"
        android:layout_marginRight="33.5dp"
        android:id="@+id/rec_create_vote">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="33.5dp"
        android:layout_marginRight="33.5dp"
        android:layout_height="30dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_add"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:paddingLeft="7.5dp"
            android:text="@string/text_create_vote_add_item"
            android:id="@+id/txt_add_item"
            android:textSize="18sp"
            android:layout_weight="1"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_weight="1"
            android:id="@+id/radio_group_vote_type"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/rbtn_create_vote"
                android:layout_marginRight="4dp"
                android:id="@+id/radio_create_vote_type_single"
                android:text="@string/rbtn_single_select"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:textColor="@color/rbtn_create_vote"
                android:text="@string/rbtn_multy_select"
                android:id="@+id/radio_create_vote_type_double"
                android:layout_height="match_parent"/>
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_marginLeft="33.5dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="33.5dp"
    android:layout_height="wrap_content">

        <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/img_create_vote_set_end_date"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/ic_calender"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_create_vote_set_date"
            android:text="@string/txt_create_vote_date_hint"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_create_vote_date_hint"
            android:textSize="18sp"
            android:id="@+id/txt_create_vote_endtime"
            android:layout_alignBottom="@+id/txt_create_vote_set_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_marginLeft="33.5dp"
        android:layout_marginRight="33.5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_create_vote_participator_limit"
            android:hint="@string/edit_create_vote_num_hint"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swh_create_vote_people_limit"
            android:layout_alignParentRight="true">
        </Switch>
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_marginLeft="33.5dp"
        android:layout_marginRight="33.5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_create_vote_password_hint"
            android:id="@+id/edit_create_vote_password"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swh_create_vote_password"
            android:layout_alignBaseline="@+id/edit_create_vote_password"
            android:layout_alignBottom="@+id/edit_create_vote_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="33.5dp"
        android:layout_marginRight="33.5dp"
        android:layout_height="wrap_content">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/swh_create_vote_anonymous"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_create_vote_anonymous"
            android:layout_alignBottom="@+id/swh_create_vote_anonymous"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create_vote"
        android:layout_gravity="center"
        android:background="@drawable/def_btn_create_vote"
        android:text="@string/btn_create_vote"/>

</LinearLayout>
