<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.hrsoft.voter.account.activity.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name_big"
        android:textColor="@color/button_up"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/text_edit_background">

        <ImageView
            android:layout_width="17.5dp"
            android:layout_height="17.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_mobile"/>

        <EditText
            android:id="@+id/mobile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/please_input_mobile"
            android:textColorHint="@color/font_primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_edit_background">

        <ImageView
            android:layout_width="17.5dp"
            android:layout_height="17.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_password"/>

        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:textColorHint="@color/font_primary"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:clickable="true"
            android:text="@string/register_immediately"
            android:textColor="@color/register_forget"/>

        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="9dp"
            android:clickable="true"
            android:text="@string/forget_password"
            android:textColor="@color/register_forget"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@color/gray_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_with_other_platform"
            android:textColor="@color/font_primary"/>

        <ImageView
            android:layout_width="110dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@color/gray_line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="41.5dp">

        <ImageView
            android:id="@+id/btn_weibo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/icon_weibo"/>

        <ImageView
            android:id="@+id/btn_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/icon_wechat"/>

        <ImageView
            android:id="@+id/btn_qq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/icon_qq"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/text_edit_background"
        android:text="@string/btn_login"
        android:textColor="@color/black"/>
</LinearLayout>
